compiler/weave_syntax/tests/data/syntax/statements/tuple0001.error
error: Unexpected tokens
        --> <source>:1:12
         |
       1 | var t0 = (2, 1, 3, 7);
         |            ^^^^^^^^^
error: Unexpected tokens
        --> <source>:2:12
         |
       2 | var t1 = (a: 2, b: 1, c: 3, d: 7);
         |            ^^^^^^^^^^^^^^^^^^^^^
error: Expected '[token:identifier]'
        --> <source>:15:11
         |
      15 | 	return x.[1_2]
         |           ^
